<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content" android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	>
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/hello"
	    android:textAppearance="?android:attr/textAppearanceLarge"
    	android:layout_marginBottom="15dip"
	    />
    <Button
    	android:id="@+id/button1"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/launch1"
    	android:layout_marginBottom="15dip"
    	/>
    <Button
    	android:id="@+id/button2"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/launch2"
    	android:layout_marginBottom="15dip"
    	/>
    <Button
    	android:id="@+id/button3"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/launch3"
    	android:layout_marginBottom="15dip"
    	/>
    <Button
    	android:id="@+id/button4"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/launch4"
    	/>
</LinearLayout>
</ScrollView>